--- a/index.html
+++ b/index.html
@@ -40,22 +40,22 @@
       {
         "@type": "SiteNavigationElement",
         "name": "Home",
-        "url": "https://www.eki.my.id/#Home"
+        "url": "https://https://portofolio-v5-git-main-jaswanth-arjuns-projects.vercel.app//#Home"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "About",
-        "url": "https://www.eki.my.id/#About"
+        "url": "https://https://portofolio-v5-git-main-jaswanth-arjuns-projects.vercel.app//#About"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "Portofolio",
-        "url": "https://www.eki.my.id/#Portofolio"
+        "url": "https://https://portofolio-v5-git-main-jaswanth-arjuns-projects.vercel.app//#Portofolio"
       },
       {
         "@type": "SiteNavigationElement",
         "name": "Contact",
-        "url": "https://www.eki.my.id/#Contact"
+        "url": "https://https://portofolio-v5-git-main-jaswanth-arjuns-projects.vercel.app//#Contact"
       }
     ]
   }
