--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" type="image/png" href="Photo.jpg"  />
 
   <!-- Primary Meta Tags -->
-  <title>Nelluru Jaswanth – Front-End Web Developer</title>
-  <meta name="title" content="Nelluru Jaswanth – Front-End Web Developer" />
-  <meta name="description" content="Saya Nelluru Jaswanth, pengembang web front-end yang berfokus pada desain antarmuka modern, responsif, dan performa tinggi. Lihat portofolio dan kontak saya di sini." />
-  <meta name="keywords" content="Eki, Eki Zulfar, Front-End Developer, Web Developer Indonesia, Portofolio Eki, Jaswanth" />
+  <title>Karnam Venkata Chaitanya – Vibe Coding & AI Agents development</title>
+  <meta name="title" content="Karnam Venkata Chaitanya – Vibe Coding & AI Agents development" />
+  <meta name="description" content="Saya Karnam Venkata Chaitanya, pengembang web front-end yang berfokus pada desain antarmuka modern, responsif, dan performa tinggi. Lihat portofolio dan kontak saya di sini." />
+  <meta name="keywords" content="Chaitanya, AI,Vibe Coding, Front-End Developer, AI Agents, Portofolio Chaitanya, " />
   <meta name="google-site-verification" content="ZYNfZwMUiNwSMF3EMvY85bid2BVvB12uMMRfUNWw75A" />
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -20,15 +20,15 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://eki.my.id/" />
-  <meta property="og:title" content="Nelluru Jaswanth – Front-End Web Developer" />
-  <meta property="og:description" content="Portofolio Nelluru Jaswanth – pengembang web dengan fokus pada desain modern dan performa tinggi." />
+  <meta property="og:title" content="Karnam Venkata Chaitanya/ – Front-End Web Developer" />
+  <meta property="og:description" content="Portofolio Karnam Venkata Chaitanya – pengembang web dengan fokus pada desain modern dan performa tinggi." />
   <meta property="og:image" content="https://eki.my.id/Meta.png" />
 
   <!-- Twitter Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://eki.my.id/" />
-  <meta name="twitter:title" content="Nelluru Jaswanth – Front-End Web Developer" />
-  <meta name="twitter:description" content="Portofolio Nelluru Jaswanth – pengembang web dengan fokus pada desain modern dan performa tinggi." />
+  <meta name="twitter:title" content="Karnam Venkata Chaitanya – Front-End Web Developer" />
+  <meta name="twitter:description" content="Portofolio Karnam Venkata Chaitanya – pengembang web dengan fokus pada desain modern dan performa tinggi." />
   <meta name="twitter:image" content="https://eki.my.id/Meta.png" />
 
   <!-- Structured Data JSON-LD -->
